data/all_generated_tests/raw_wast_tests/block_StackCorruption_1865.wast
;; 6. **Test Description**:    Construct a block with a block type that specifies producing a result type that is never actually pushed inside the block. Validate if the environment correctly identifies this mismatch, checking stack for missing the required output types. This will uncover any inconsistencies in type adherence within a block context.

(assert_invalid
  (module
    (func (result i32)
      (block (result i32)
        (nop)
      )
    )
  )
  "type mismatch"
)